--- a/404.html
+++ b/404.html
@@ -1,7 +1,9 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 
 <head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>404 | Jet Yeh's</title>
     <link rel="stylesheet" href="https://dngaa.github.io/css/particles.css">
     <style>
