--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
                         </a>
                      </div>
                      <div name="Zombs Royale" class="column gameDiv all">
-                        <a class="blogLink" href="games/zombs-royale/index.html">
+                        <a class="blogLink" href="https://zombsroyale.io/">
                            <div class="content">
                               <img src="img/zombs-royale.png" alt="Zombs Royale" style="width:100%">
                               <h4>Zombs Royale</h4>
