--- a/index.html
+++ b/index.html
@@ -85,6 +85,14 @@
                <div class="main">
                   <!-- Portfolio Gallery Grid -->
                   <div class="row">
+                     <div name="Toss The Turtle" class="column gameDiv all flash new">
+                        <a class="blogLink" href="/games/flash/?swf=tosstheturtle.swf">
+                           <div class="content">
+                              <img src="img/toss-the-turtle.jpg" alt="Toss The Turtle" style="width:100%">
+                              <h4>Toss The Turtle</h4>
+                           </div>
+                        </a>
+                     </div>
                      <div name="Subway Surfers" class="column gameDiv all">
                         <a class="blogLink" href="games/subway-surfers/">
                            <div class="content">
