--- a/index.html
+++ b/index.html
@@ -85,6 +85,14 @@
                <div class="main">
                   <!-- Portfolio Gallery Grid -->
                   <div class="row">
+                  <div name="Smash Karts" class="column gameDiv all">
+                        <a class="blogLink" href="games/smashkarts/">
+                           <div class="content">
+                              <img src="img/subway-surfers.png" alt="Smash Karts" style="width:100%">
+                              <h4>Smash Karts</h4>
+                           </div>
+                        </a>
+                     </div>
                      <div name="Toss The Turtle" class="column gameDiv all flash new">
                         <a class="blogLink" href="/games/flash/?swf=tosstheturtle.swf">
                            <div class="content">
