--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
                   <div name="Smash Karts" class="column gameDiv all">
                         <a class="blogLink" href="games/smashkarts/">
                            <div class="content">
-                              <img src="img/subway-surfers.png" alt="Smash Karts" style="width:100%">
+                              <img src="img/smashkarts.jpeg" alt="Smash Karts" style="width:100%">
                               <h4>Smash Karts</h4>
                            </div>
                         </a>
