--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
                   <!-- Portfolio Gallery Grid -->
                   <div class="row">
                   <div name="Smash Karts" class="column gameDiv all">
-                        <a class="blogLink" href="games/smashkarts/">
+                        <a class="blogLink" href="games/smashkarts/index.html">
                            <div class="content">
                               <img src="img/smashkarts.jpeg" alt="Smash Karts" style="width:100%">
                               <h4>Smash Karts</h4>
