--- a/index.html
+++ b/index.html
@@ -85,6 +85,14 @@
                <div class="main">
                   <!-- Portfolio Gallery Grid -->
                   <div class="row">
+                  <div name="Krunker" class="column gameDiv all">
+                        <a class="blogLink" href="games/krunker/">
+                           <div class="content">
+                              <img src="" alt="Krunker" style="width:100%">
+                              <h4>Krunker</h4>
+                           </div>
+                        </a>
+                     </div>
                   <div name="Smash Karts" class="column gameDiv all">
                         <a class="blogLink" href="games/smashkarts/index.html">
                            <div class="content">
