--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
       <div class="main_content">
          <div class="alert">
             <span class="closebtn" onclick="this.parentElement.style.display='none';">&times;</span>
-            "Vote Jet Yeh as class president!" - Brett Chase
+            "yup" - Brett Chase
          </div>
          <div class="info">
             <header>
