--- a/index.html
+++ b/index.html
@@ -93,7 +93,6 @@
                            </div>
                         </a>
                      </div>
-                  <div class="row">
                      <div name="Toss The Turtle" class="column gameDiv all flash new">
                         <a class="blogLink" href="/games/flash/?swf=tosstheturtle.swf">
                            <div class="content">
@@ -107,14 +106,6 @@
                            <div class="content">
                               <img src="img/subway-surfers.png" alt="Subway Surfers" style="width:100%">
                               <h4>Subway Surfers</h4>
-                           </div>
-                        </a>
-                     </div>
-                     <div name="Zombs Royale" class="column gameDiv all">
-                        <a class="blogLink" href="https://zombsroyale.io/">
-                           <div class="content">
-                              <img src="img/zombs-royale.png" alt="Zombs Royale" style="width:100%">
-                              <h4>Zombs Royale</h4>
                            </div>
                         </a>
                      </div>
@@ -780,12 +771,12 @@
                            </div>
                         </a>
                      </div>
-                     <div name="Basketball Legends" class="column gameDiv all 2 sport">
+                     <div name="Basketball Stars" class="column gameDiv all 2 sport">
                         <a class="blogLink" href="games/basketball-stars/">
                            <div class="content">
-                              <img src="img/basketball-Legends.png" alt="Basketball Legends"
+                              <img src="img/place-holder.png" alt="Basketball Stars"
                                  style="width:100%">
-                              <h4>Basketball Legends</h4>
+                              <h4>Basketball Stars</h4>
                            </div>
                         </a>
                      </div>
