--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
    <link rel="stylesheet" href="css/particles.css">
    <link rel="stylesheet" href="css/style.css">
    <link rel="stylesheet" href="css/blogDexStyle.css">
+   <link rel='icon' href="img/jetyeh-favicon.png">
    <script src="https://kit.fontawesome.com/f4c5c3ffd2.js"></script>
 </head>
 
