--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
                   <!-- Portfolio Gallery Grid -->
                   <div class="row">
                      <div name="Stick Slasher" class="column gameDiv all new">
-                        <a class="blogLink" href="/games/db7df586-630c-42f6-8072-ce597bbebb33/content/7b94d8fc-8e0f-4d66-ad15-3c9d45e54cdf.id.repl.co/index.html">
+                        <a class="blogLink" href="more-games/db7df586-630c-42f6-8072-ce597bbebb33/content/7b94d8fc-8e0f-4d66-ad15-3c9d45e54cdf.id.repl.co/index.html">
                            <div class="content">
                               <img src="img/place-holder.png" alt="Stick Slasher" style="width:100%">
                               <h4>Stick Slasher</h4>
@@ -95,7 +95,7 @@
                         </a>
                      </div>
                      <div name="Toss The Turtle" class="column gameDiv all flash">
-                        <a class="blogLink" href="/games/flash/?swf=tosstheturtle.swf">
+                        <a class="blogLink" href="games/flash/?swf=tosstheturtle.swf">
                            <div class="content">
                               <img src="img/toss-the-turtle.jpg" alt="Toss The Turtle" style="width:100%">
                               <h4>Toss The Turtle</h4>
