--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
                      <div name="Stick Slasher" class="column gameDiv all new">
                         <a class="blogLink" href="more-games/db7df586-630c-42f6-8072-ce597bbebb33/content/7b94d8fc-8e0f-4d66-ad15-3c9d45e54cdf.id.repl.co/index.html">
                            <div class="content">
-                              <img src="img/place-holder.png" alt="Stick Slasher" style="width:100%">
+                              <img src="img/stick-slasher.png" alt="Stick Slasher" style="width:100%">
                               <h4>Stick Slasher</h4>
                            </div>
                         </a>
