--- a/index.html
+++ b/index.html
@@ -86,6 +86,14 @@
                <div class="main">
                   <!-- Portfolio Gallery Grid -->
                   <div class="row">
+                     <div name="Tiny Fishing" class="column gameDiv all new">
+                        <a class="blogLink" href="more-games/ebac7426-df7d-44c9-a8a0-34ec4c4fab2c/content/enjoy4fun.com/game/tinyfishing/v2/index.html">
+                           <div class="content">
+                              <img src="img/tiny-fishing.png" alt="Tiny Fishing" style="width:100%">
+                              <h4>Tiny Fishing</h4>
+                           </div>
+                        </a>
+                     </div>
                      <div name="Stick Slasher" class="column gameDiv all new">
                         <a class="blogLink" href="more-games/db7df586-630c-42f6-8072-ce597bbebb33/content/7b94d8fc-8e0f-4d66-ad15-3c9d45e54cdf.id.repl.co/index.html">
                            <div class="content">
