--- a/index.html
+++ b/index.html
@@ -127,7 +127,7 @@
                         </a>
                      </div>
                      <div name="Meat Boy" class="column gameDiv all flash">
-                        <a class="blogLink" href="/games/flash/?swf=meatboy.swf">
+                        <a class="blogLink" href="games/flash/?swf=meatboy.swf">
                            <div class="content">
                               <img src="img/meatboy.png" alt="Meat Boy" style="width:100%">
                               <h4>Meat Boy</h4>
@@ -279,7 +279,7 @@
                         </a>
                      </div>
                      <div name="Jelly Mario" class="column gameDiv all">
-                        <a class="blogLink" href="/games/jelly-mario/jellymar/">
+                        <a class="blogLink" href="games/jelly-mario/jellymar/">
                            <div class="content">
                               <img src="img/jelly-mario.png" alt="Jelly Mario" style="width:100%">
                               <h4>Jelly Mario</h4>
@@ -295,7 +295,7 @@
                         </a>
                      </div>
                      <div name="The Worlds Hardest Game" class="column gameDiv all">
-                        <a class="blogLink" href="/games/worlds-hardest-game/">
+                        <a class="blogLink" href="games/worlds-hardest-game/">
                            <div class="content">
                               <img src="img/worlds-hardest-game.png" alt="The Worlds Hardest Game" style="width:100%">
                               <h4>The Worlds Hardest Game</h4>
@@ -303,7 +303,7 @@
                         </a>
                      </div>
                      <div name="The Worlds Hardest Game 2" class="column gameDiv all flash">
-                        <a class="blogLink" href="/games/flash/?swf=worldshardestgame2.swf">
+                        <a class="blogLink" href="games/flash/?swf=worldshardestgame2.swf">
                            <div class="content">
                               <img src="img/worlds-hardest-game-2.png" alt="The Worlds Hardest Game 2"
                                  style="width:100%">
@@ -312,7 +312,7 @@
                         </a>
                      </div>
                      <div name="Papa's Pizzeria" class="column gameDiv all flash">
-                        <a class="blogLink" href="/games/flash/?swf=papaspizzeria.swf">
+                        <a class="blogLink" href="games/flash/?swf=papaspizzeria.swf">
                            <div class="content">
                               <img src="img/papaspizzeria.png" alt="Papa's Pizzeria" style="width:100%">
                               <h4>Papa's Pizzeria</h4>
@@ -320,7 +320,7 @@
                         </a>
                      </div>
                      <div name="Hobo 1" class="column gameDiv all flash">
-                        <a class="blogLink" href="/games/flash/?swf=hobo.swf">
+                        <a class="blogLink" href="games/flash/?swf=hobo.swf">
                            <div class="content">
                               <img src="img/hobo.png" alt="Hobo" style="width:100%">
                               <h4>Hobo</h4>
@@ -328,7 +328,7 @@
                         </a>
                      </div>
                      <div name="Hobo 2: Prison Brawl" class="column gameDiv all flash">
-                        <a class="blogLink" href="/games/flash/?swf=hobo2.swf">
+                        <a class="blogLink" href="games/flash/?swf=hobo2.swf">
                            <div class="content">
                               <img src="img/hobo2.png" alt="Hobo 2: Prison Brawl" style="width:100%">
                               <h4>Hobo 2: Prison Brawl</h4>
@@ -336,7 +336,7 @@
                         </a>
                      </div>
                      <div name="Hobo 3: Wanted" class="column gameDiv all flash">
-                        <a class="blogLink" href="/games/flash/?swf=hobo3.swf">
+                        <a class="blogLink" href="games/flash/?swf=hobo3.swf">
                            <div class="content">
                               <img src="img/hobo3.png" alt="Hobo 3: Wanted" style="width:100%">
                               <h4>Hobo 3: Wanted</h4>
@@ -344,7 +344,7 @@
                         </a>
                      </div>
                      <div name="Hobo 4: Total War" class="column gameDiv all flash">
-                        <a class="blogLink" href="/games/flash/?swf=hobo4.swf">
+                        <a class="blogLink" href="games/flash/?swf=hobo4.swf">
                            <div class="content">
                               <img src="img/hobo4.png" alt="Hobo 4: Total War" style="width:100%">
                               <h4>Hobo 4: Total War</h4>
@@ -352,7 +352,7 @@
                         </a>
                      </div>
                      <div name="Hobo 5: Space Brawl" class="column gameDiv all flash">
-                        <a class="blogLink" href="/games/flash/?swf=hobo5.swf">
+                        <a class="blogLink" href="games/flash/?swf=hobo5.swf">
                            <div class="content">
                               <img src="img/hobo5.png" alt="Hobo 5: Space Brawl" style="width:100%">
                               <h4>Hobo 5: Space Brawl</h4>
@@ -360,7 +360,7 @@
                         </a>
                      </div>
                      <div name="Hobo 6: Hell" class="column gameDiv all flash">
-                        <a class="blogLink" href="/games/flash/?swf=hobo6.swf">
+                        <a class="blogLink" href="games/flash/?swf=hobo6.swf">
                            <div class="content">
                               <img src="img/hobo6.png" alt="Hobo 6: Hell" style="width:100%">
                               <h4>Hobo 6: Hell</h4>
@@ -368,7 +368,7 @@
                         </a>
                      </div>
                      <div name="Hobo 7: Heaven" class="column gameDiv all flash">
-                        <a class="blogLink" href="/games/flash/?swf=hobo7.swf">
+                        <a class="blogLink" href="games/flash/?swf=hobo7.swf">
                            <div class="content">
                               <img src="img/hobo7.png" alt="Hobo 7: Heaven" style="width:100%">
                               <h4>Hobo 7: Heaven</h4>
@@ -376,7 +376,7 @@
                         </a>
                      </div>
                      <div name="Bloxorz" class="column gameDiv all flash">
-                        <a class="blogLink" href="/games/flash/?swf=bloxorz.swf">
+                        <a class="blogLink" href="games/flash/?swf=bloxorz.swf">
                            <div class="content">
                               <img src="img/bloxorz.png" alt="Bloxorz" style="width:100%">
                               <h4>Bloxorz</h4>
@@ -384,7 +384,7 @@
                         </a>
                      </div>
                      <div name="Bloons Tower Defense 1" class="column gameDiv all flash">
-                        <a class="blogLink" href="/games/flash/?swf=bloonstd1.swf">
+                        <a class="blogLink" href="games/flash/?swf=bloonstd1.swf">
                            <div class="content">
                               <img src="img/bloons-tower-defense.png" alt="Bloons Tower Defense" style="width:100%">
                               <h4>Bloons Tower Defense</h4>
@@ -392,7 +392,7 @@
                         </a>
                      </div>
                      <div name="Bloons Tower Defense 2" class="column gameDiv all flash">
-                        <a class="blogLink" href="/games/flash/?swf=bloonstd2.swf">
+                        <a class="blogLink" href="games/flash/?swf=bloonstd2.swf">
                            <div class="content">
                               <img src="img/bloons-tower-defense-2.png" alt="Bloons Tower Defense 2" style="width:100%">
                               <h4>Bloons Tower Defense 2</h4>
@@ -496,7 +496,7 @@
                         </a>
                      </div>
                      <div name="Duck Life 1" class="column gameDiv all flash">
-                        <a class="blogLink" href="/games/flash/?swf=ducklife.swf">
+                        <a class="blogLink" href="games/flash/?swf=ducklife.swf">
                            <div class="content">
                               <img src="img/duck-life.png" alt="Duck Life 1" style="width:100%">
                               <h4>Duck Life</h4>
@@ -504,7 +504,7 @@
                         </a>
                      </div>
                      <div name="Duck Life 2" class="column gameDiv all flash">
-                        <a class="blogLink" href="/games/flash/?swf=ducklife2.swf">
+                        <a class="blogLink" href="games/flash/?swf=ducklife2.swf">
                            <div class="content">
                               <img src="img/duck-life-2.png" alt="Duck Life 2" style="width:100%">
                               <h4>Duck Life 2</h4>
@@ -512,7 +512,7 @@
                         </a>
                      </div>
                      <div name="Duck Life 3" class="column gameDiv all flash">
-                        <a class="blogLink" href="/games/flash/?swf=ducklife3.swf">
+                        <a class="blogLink" href="games/flash/?swf=ducklife3.swf">
                            <div class="content">
                               <img src="img/duck-life-3.png" alt="Duck Life 3" style="width:100%">
                               <h4>Duck Life 3</h4>
@@ -520,7 +520,7 @@
                         </a>
                      </div>
                      <div name="Duck Life 4" class="column gameDiv all flash">
-                        <a class="blogLink" href="/games/flash/?swf=ducklife4.swf">
+                        <a class="blogLink" href="games/flash/?swf=ducklife4.swf">
                            <div class="content">
                               <img src="img/duck-life-4.png" alt="Duck Life 4" style="width:100%">
                               <h4>Duck Life 4</h4>
@@ -689,7 +689,7 @@
                         </a>
                      </div>
                      <div name="Tetris" class="column gameDiv all flash">
-                        <a class="blogLink" href="/games/flash/?swf=tetris.swf">
+                        <a class="blogLink" href="games/flash/?swf=tetris.swf">
                            <div class="content">
                               <img src="img/tetris.png" alt="Tetris" style="width:100%">
                               <h4>Tetris</h4>
@@ -789,14 +789,6 @@
                            </div>
                         </a>
                      </div>
-                     <div name="Gun Mayhem 2" class="column gameDiv all 2">
-                        <a class="blogLink" href="#">
-                           <div class="content">
-                              <img src="img/Gun-Mayham.png" alt="Gun Mayhem 2" style="width:100%">
-                              <h4>NOT WORKING</h4>
-                           </div>
-                        </a>
-                     </div>
                      <div name="Tank Trouble 2" class="column gameDiv all 2 car">
                         <a class="blogLink" href="games/tank-trouble-2/">
                            <div class="content">
@@ -807,7 +799,7 @@
                         </a>
                      </div>
                      <div name="GunBlood" class="column gameDiv all flash">
-                        <a class="blogLink" href="/games/flash/?swf=gunblood.swf">
+                        <a class="blogLink" href="games/flash/?swf=gunblood.swf">
                            <div class="content">
                               <img src="img/gunBlood.png" alt="Gun Blood" style="width:100%">
                               <h4>GunBlood</h4>
