--- a/index.html
+++ b/index.html
@@ -86,6 +86,94 @@
                <div class="main">
                   <!-- Portfolio Gallery Grid -->
                   <div class="row">
+                     <div name="1 on 1 Soccer" class="column gameDiv all flash new">
+                        <a class="blogLink" href="games/flash/?swf=1on1soccer.swf">
+                           <div class="content">
+                              <img src="img/place-holder.png" alt="1 on 1 Soccer" style="width:100%">
+                              <h4>1 on 1 Soccer</h4>
+                           </div>
+                        </a>
+                     </div>
+                     <div name="Age of War" class="column gameDiv all flash new">
+                        <a class="blogLink" href="games/flash/?swf=ageofwar.swf">
+                           <div class="content">
+                              <img src="img/age-of-war.png" alt="Age of War" style="width:100%">
+                              <h4>Age of War</h4>
+                           </div>
+                        </a>
+                     </div>
+                     <div name="Age of War" class="column gameDiv all flash new">
+                        <a class="blogLink" href="games/flash/?swf=ageofwar.swf">
+                           <div class="content">
+                              <img src="img/place-holder.png" alt="Age of War" style="width:100%">
+                              <h4>Age of War</h4>
+                           </div>
+                        </a>
+                     </div>
+                     <div name="Bullet Bill" class="column gameDiv all flash new">
+                        <a class="blogLink" href="games/flash/?swf=bulletbill.swf">
+                           <div class="content">
+                              <img src="img/place-holder.png" alt="Bullet Bill" style="width:100%">
+                              <h4>Bullet Bill</h4>
+                           </div>
+                        </a>
+                     </div>
+                     <div name="Cube Field" class="column gameDiv all flash new">
+                        <a class="blogLink" href="games/flash/?swf=cubefield.swf">
+                           <div class="content">
+                              <img src="img/cube-field.png" alt="Cube Field" style="width:100%">
+                              <h4>Cube Field</h4>
+                           </div>
+                        </a>
+                     </div>
+                     <div name="Miami Shark" class="column gameDiv all flash new">
+                        <a class="blogLink" href="games/flash/?swf=miamishark.swf">
+                           <div class="content">
+                              <img src="img/place-holder.png" alt="Miami Shark" style="width:100%">
+                              <h4>Miami Shark</h4>
+                           </div>
+                        </a>
+                     </div>
+                     <div name="Mini Putt" class="column gameDiv all flash new">
+                        <a class="blogLink" href="games/flash/?swf=miniputt.swf">
+                           <div class="content">
+                              <img src="img/miniputt.png" alt="Mini Putt" style="width:100%">
+                              <h4>Mini Putt</h4>
+                           </div>
+                        </a>
+                     </div>
+                     <div name="Stealing the Diamond" class="column gameDiv all flash new">
+                        <a class="blogLink" href="games/flash/?swf=stealingthediamond.swf">
+                           <div class="content">
+                              <img src="img/place-holder.png" alt="Stealing the Diamond" style="width:100%">
+                              <h4>Stealing the Diamond</h4>
+                           </div>
+                        </a>
+                     </div>
+                     <div name="Escaping the Prison" class="column gameDiv all flash new">
+                        <a class="blogLink" href="games/flash/?swf=escapingtheprison.swf">
+                           <div class="content">
+                              <img src="img/place-holder.png" alt="Escaping the Prison" style="width:100%">
+                              <h4>Escaping the Prison</h4>
+                           </div>
+                        </a>
+                     </div>
+                     <div name="Unfair Mario" class="column gameDiv all flash new">
+                        <a class="blogLink" href="games/flash/?swf=unfairmario.swf">
+                           <div class="content">
+                              <img src="img/unfair-mario.png" alt="Unfair Mario" style="width:100%">
+                              <h4>Unfair Mario</h4>
+                           </div>
+                        </a>
+                     </div>
+                     <div name="Grow in the Hole" class="column gameDiv all new">
+                        <a class="blogLink" href="more-games/26a025a2-9ab0-4d3f-8892-83528bede967/content/cache.armorgames.com/files/games/grow-in-the-hole-18581/index.html">
+                           <div class="content">
+                              <img src="img/grow-in-the-hole.png" alt="Grow in the Hole" style="width:100%">
+                              <h4>Grow in the Hole</h4>
+                           </div>
+                        </a>
+                     </div>
                      <div name="Tiny Fishing" class="column gameDiv all new">
                         <a class="blogLink" href="more-games/ebac7426-df7d-44c9-a8a0-34ec4c4fab2c/content/enjoy4fun.com/game/tinyfishing/v2/index.html">
                            <div class="content">
