--- a/index.html
+++ b/index.html
@@ -544,7 +544,7 @@
                         </a>
                      </div>
                      <div name="Retro Bowl" class="column gameDiv all sport">
-                        <a class="blogLink" href="games/retro-bowl/">
+                        <a class="blogLink" href="#">
                            <div class="content">
                               <img src="img/retro-bowl.png" alt="Retro Bowl" style="width:100%">
                               <h4>Retro Bowl</h4>
