--- a/404.html
+++ b/404.html
@@ -91,7 +91,7 @@
     <div id="particles-js"></div>
     <section class="notFound">
         <div class="img">
-            <img style="width:600px;" src="https://dngaa.github.io/img/404.png" alt="icon" />
+            <img style="width:600px;" src="https://vincent-he-gay.github.io/img/404.png" alt="icon" />
         </div>
         <div class="text">
             <h1>404</h1>
@@ -101,8 +101,8 @@
             <a href="https://www.youtube.com/watch?v=G3AfIvJBcGo">NO</a>
         </div>
     </section>
-    <script type="text/javascript" src="https://dngaa.github.io/js/particles.js"></script>
-    <script type="text/javascript" src="https://dngaa.github.io/js/app.js"></script>
+    <script type="text/javascript" src="https://vincent-he-gay.github.io/js/particles.js"></script>
+    <script type="text/javascript" src="https://vincent-he-gay.github.io/js/app.js"></script>
 </body>
 
 </html>
