--- a/404.html
+++ b/404.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>404 | Jet Yeh's</title>
-    <link rel="stylesheet" href="https://dngaa.github.io/css/particles.css">
+    <link rel="stylesheet" href="https://vincent-he-gay.github.io/css/particles.css">
     <style>
         @import url('https://fonts.googleapis.com/css2?family=Press+Start+2P&display=swap');
 
