--- a/404.html
+++ b/404.html
@@ -97,7 +97,7 @@
             <h1>404</h1>
             <h2>PAGE NOT FOUND</h2>
             <h3>BACK TO HOME?</h3>
-            <a href="https://dngaa.github.io/index.html" class="yes">YES</a>
+            <a href="https://vincent-he-gay.github.io/index.html" class="yes">YES</a>
             <a href="https://www.youtube.com/watch?v=G3AfIvJBcGo">NO</a>
         </div>
     </section>
