--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
                      <div name="1 on 1 Soccer" class="column gameDiv all flash new">
                         <a class="blogLink" href="games/flash/?swf=1on1soccer.swf">
                            <div class="content">
-                              <img src="img/place-holder.png" alt="1 on 1 Soccer" style="width:100%">
+                              <img src="img/1-on-1-soccer.png" alt="1 on 1 Soccer" style="width:100%">
                               <h4>1 on 1 Soccer</h4>
                            </div>
                         </a>
@@ -121,7 +121,7 @@
                      <div name="Miami Shark" class="column gameDiv all flash new">
                         <a class="blogLink" href="games/flash/?swf=miamishark.swf">
                            <div class="content">
-                              <img src="img/place-holder.png" alt="Miami Shark" style="width:100%">
+                              <img src="img/miami-shark.png" alt="Miami Shark" style="width:100%">
                               <h4>Miami Shark</h4>
                            </div>
                         </a>
@@ -137,7 +137,7 @@
                      <div name="Stealing the Diamond" class="column gameDiv all flash new">
                         <a class="blogLink" href="games/flash/?swf=stealingthediamond.swf">
                            <div class="content">
-                              <img src="img/place-holder.png" alt="Stealing the Diamond" style="width:100%">
+                              <img src="img/stealing-the-diamond.png" alt="Stealing the Diamond" style="width:100%">
                               <h4>Stealing the Diamond</h4>
                            </div>
                         </a>
@@ -145,7 +145,7 @@
                      <div name="Escaping the Prison" class="column gameDiv all flash new">
                         <a class="blogLink" href="games/flash/?swf=escapingtheprison.swf">
                            <div class="content">
-                              <img src="img/place-holder.png" alt="Escaping the Prison" style="width:100%">
+                              <img src="img/escaping-the-prison.png" alt="Escaping the Prison" style="width:100%">
                               <h4>Escaping the Prison</h4>
                            </div>
                         </a>
