Bullet Bill & 404 favicon

--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@
                      <div name="Bullet Bill" class="column gameDiv all flash new">
                         <a class="blogLink" href="games/flash/?swf=bulletbill.swf">
                            <div class="content">
-                              <img src="img/place-holder.png" alt="Bullet Bill" style="width:100%">
+                              <img src="img/bullet-bill.png" alt="Bullet Bill" style="width:100%">
                               <h4>Bullet Bill</h4>
                            </div>
                         </a>
