--- a/404.html
+++ b/404.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>404 | Jet Yeh's</title>
+    <link rel='icon' href="dngaa.github.io/img/favicon-32x32.png">
     <link rel="stylesheet" href="dngaa.github.io/css/particles.css">
     <style>
         @import url('https://fonts.googleapis.com/css2?family=Press+Start+2P&display=swap');
