--- a/404.html
+++ b/404.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>404 | Jet Yeh's</title>
+    <title>Jet Yeh's | 404</title>
     <link rel='icon' href="dngaa.github.io/img/favicon-32x32.png">
     <link rel="stylesheet" href="dngaa.github.io/css/particles.css">
     <style>
