--- a/games/flash/index.html
+++ b/games/flash/index.html
@@ -1,7 +1,8 @@
 <!DOCTYPE html>
 <html>
 	<head>
-		<title>Flash Player</title>
+		<title>Jet Yeh's | Flash Player</title>
+		<link rel='icon' href="img/favicon-32x32.png">
 		<style>
 			body {
 				overflow: hidden;
