--- a/games/flash/index.html
+++ b/games/flash/index.html
@@ -2,7 +2,7 @@
 <html>
 	<head>
 		<title>Jet Yeh's | Flash Player</title>
-		<link rel='icon' href="img/favicon-32x32.png">
+		<link rel='icon' href="/././img/favicon-32x32.png">
 		<style>
 			body {
 				overflow: hidden;
