--- a/games/8ball/index.html
+++ b/games/8ball/index.html
@@ -10,10 +10,10 @@
 
         <meta name="viewport" content="user-scalable=no">
 
-        <title>Pool: 8 Ball Mania</title>
+        <title>Jet Yeh's | 8 Ball Mania</title>
 
-        <link rel="icon" type="image/png" href="assets/favicon/icon-512x512.png" sizes="512x512">
-        <link rel="apple-touch-icon" href="assets/favicon/icon-150x150.png" >
+        <link rel="icon" type="image/png" href="/./img/favicon-32x32.png" sizes="32x32">
+        <link rel="apple-touch-icon" href="/./img/favicon-32x32.png" >
 
         <style type="text/css">
             body {
