--- a/index.html
+++ b/index.html
@@ -797,7 +797,7 @@
                      <div name="8 Ball Pool" class="column gameDiv all sport">
                         <a class="blogLink" href="games/8ball/">
                            <div class="content">
-                              <img src="img/8ballPool.png" alt="8 Ball Pool" style="width:100%">
+                              <img src="img/8-ball-pool.png" alt="8 Ball Pool" style="width:100%">
                               <h4>8 Ball Pool</h4>
                            </div>
                         </a>
