Titles & Favicon changes
2048, a dark room, and basketball stars tab title & favicon change

--- a/games/a-dark-room/index.html
+++ b/games/a-dark-room/index.html
@@ -10,11 +10,11 @@
 		Inspired by Candy Box (http://candies.aniwey.net/)
 		Contribute on GitHub! (https://github.com/doublespeakgames/adarkroom/)
 	-->
-	<title>A Dark Room</title>
+	<title>Jet Yeh's | A Dark Room</title>
 	<meta itemprop="description" name="description" property="og:description" content="A minimalist text adventure">
 	<meta itemprop="image" property="og:image" content="img/adr.png" />
 	<meta itemprop="name" property="og:title" content="A Dark Room" />
-	<link rel="shortcut icon" href="favicon.ico" />
+	<link rel="shortcut icon" href="/./img/favicon-32x32.png" />
 	<link rel="image_src" href="img/adr.png" />
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.10.1/jquery.min.js"></script>
 	<script>
