another minor update
just some more logo stuff

--- a/games/bounce-back/index.html
+++ b/games/bounce-back/index.html
@@ -39,7 +39,8 @@
 
 <html>
 <head>
-<title>Bounce Back</title>
+<title>Jet Yeh's | Bounce Back</title>
+<link rel='icon' href="/./img/favicon-32x32.png">
 <style>
 body
 {
