--- a/games/chrome-dino/index.html
+++ b/games/chrome-dino/index.html
@@ -9,8 +9,8 @@
 	<link rel="apple-touch-icon" sizes="128x128" href="icons/icon-128.png">
 	<link rel="apple-touch-icon" sizes="256x256" href="icons/icon-256.png">
 	<meta name="theme-color" content="#fff">
-	<link rel="icon" href="favicon.ico">
-    <title>Chrome Dino | 3kh0</title>
+	<link rel="icon" href="/./img/favicon-32x32.png">
+    <title>Jet Yeh's | Chrome Dino</title>
     <link rel="stylesheet" href="style.css">
     <script src="game.js"></script>
 	<link rel="manifest" href="appmanifest.json">
