--- a/games/basketball-stars/index.html
+++ b/games/basketball-stars/index.html
@@ -6,7 +6,7 @@
         <meta name="viewport" content="initial-scale=1, maximum-scale=1, user-scalable=no, shrink-to-fit=no" />
         <link rel="stylesheet" href="assets/css/app.css" type="text/css" />
         <title>Jet Yeh's | Basketball Stars</title>
-
+        <link rel='icon' href="/./img/favicon-32x32.png">
         <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
     </head>
     <script src="/js/main.js"></script>
