--- a/games/btts/index.html
+++ b/games/btts/index.html
@@ -4,7 +4,7 @@
     <script src="/js/main.js"></script>
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" />
-    <title>Big Tower Tiny Square | 3kh0</title>
+    <title>Jet Yeh's | Big Tower Tiny Square</title>
 
     <!-- Standardised web app manifest -->
     <link rel="manifest" href="appmanifest.json" />
@@ -18,8 +18,8 @@
 
     <!-- Chrome for Android web app tags -->
     <meta name="mobile-web-app-capable" content="yes" />
-    <link rel="shortcut icon" sizes="256x256" href="icon-256.png" />
-    <link rel="icon" sizes="256x256" href="icon-256.png" />
+    <link rel="shortcut icon" sizes="32x32" href="/./img/favicon-32x32.png" />
+    <link rel="icon" sizes="32x32" href="/./img/favicon-32x32.png" />
 
     <!-- All margins and padding must be zero for the canvas to fill the screen. -->
     <style type="text/css">
