--- a/games/cell-machine/index.html
+++ b/games/cell-machine/index.html
@@ -3,9 +3,9 @@
   <head>
     <meta charset="utf-8">
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
-    <title>Cell Machine</title>
-    <link rel="shortcut icon" href="img/icon.png">
-    <link rel="icon" href="img/icon.png">
+    <title>Jet Yeh's | Cell Machine</title>
+    <link rel="shortcut icon" href="/./img/favicon-32x32.png">
+    <link rel="icon" href="/./img/favicon-32x32.png">
     <link rel="stylesheet" href="TemplateData/style.css">
     <script src="TemplateData/UnityProgress.js"></script>
     <script src="Build/UnityLoader.js"></script>
