--- a/404.html
+++ b/404.html
@@ -5,8 +5,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Jet Yeh's | 404</title>
-    <link rel='icon' href="https://dngaa.github.io/img/favicon-32x32.png">
-    <link rel="stylesheet" href="https://dngaa.github.io/css/particles.css">
+    <link rel='icon' href="img/favicon-32x32.png">
+    <link rel="stylesheet" href="css/particles.css">
     <style>
         @import url('https://fonts.googleapis.com/css2?family=Press+Start+2P&display=swap');
 
@@ -92,18 +92,18 @@
     <div id="particles-js"></div>
     <section class="notFound">
         <div class="img">
-            <img style="width:600px;" src="https://dngaa.github.io/img/404.png" alt="icon" />
+            <img style="width:600px;" src="/img/404.png" alt="icon" />
         </div>
         <div class="text">
             <h1>404</h1>
             <h2>PAGE NOT FOUND</h2>
             <h3>BACK TO HOME?</h3>
-            <a href="https://dngaa.github.io/index.html" class="yes">YES</a>
+            <a href="/index.html" class="yes">YES</a>
             <a href="https://www.youtube.com/watch?v=G3AfIvJBcGo">NO</a>
         </div>
     </section>
-    <script type="text/javascript" src="https://dngaa.github.io/js/particles.js"></script>
-    <script type="text/javascript" src="https://dngaa.github.io/js/app.js"></script>
+    <script type="text/javascript" src="js/particles.js"></script>
+    <script type="text/javascript" src="js/app.js"></script>
 </body>
 
 </html>
