--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
             <a href="/pages/request.html">
                <li><i class="fa-solid fa-ghost"></i> Game Request</li>
             </a>
-            <a href="/pages/#">
+            <a href="/pages/settings.html">
                <li><i class="fa-solid fa-gear"></i> Settings</li>
             </a>
             <div class=left-col>
