--- a/pages/settings.html
+++ b/pages/settings.html
@@ -2,16 +2,17 @@
 <html>
 
 <head>
-<h1>(Under Construction)</h1>
+<title>Under Construction</title>
+    <link rel="stylesheet" href="/css/style.css">
+    <link rel="stylesheet" href="/css/styles.css">
+    <link rel="stylesheet" href="/css/particles.css">
+    <link rel='icon' href="https://i.ibb.co/DYWMfgQ/Untitled-2.png">
 </head>
 
 <body>
     <div id="particles-js"></div>
     <center>
         <br>
-        <iframe
-            src="https://docs.google.com/forms/d/e/1FAIpQLSeVxWIpa-UjJf_f-_mGzYmdv5nbJwdrZf3Tx8JPtxn2vE4HxA/viewform?embedded=true"
-            width="640" height="900px" frameborder="0" marginheight="0" marginwidth="0">Loading…</iframe>
         <p>
             <button onclick="window.open ('index.html', '_self');" class="button button1">back</button>
         </p>
