--- a/pages/settings.html
+++ b/pages/settings.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="/css/styles.css">
     <link rel="stylesheet" href="/css/particles.css">
     <link rel='icon' href="https://i.ibb.co/DYWMfgQ/Untitled-2.png">
+    <h1>Under Contruction</h1>
 </head>
 
 <body>
