--- a/pages/settings.html
+++ b/pages/settings.html
@@ -2,7 +2,7 @@
 <html>
 
 <head>
-<title>Under Construction</title>
+<title>Settings</title>
     <link rel="stylesheet" href="/css/style.css">
     <link rel="stylesheet" href="/css/styles.css">
     <link rel="stylesheet" href="/css/particles.css">
