--- a/index.html
+++ b/index.html
@@ -18,13 +18,13 @@
             <a href="#">
                <li><i class="fa-solid fa-up-long"></i> Top</li>
             </a>
-            <a href="/pages/report.html">
+            <a href="pages/report.html">
                <li><i class="fa-solid fa-bug"></i> Bug Report</li>
             </a>
-            <a href="/pages/request.html">
+            <a href="pages/request.html">
                <li><i class="fa-solid fa-ghost"></i> Game Request</li>
             </a>
-            <a href="/pages/settings.html">
+            <a href="pages/settings.html">
                <li><i class="fa-solid fa-gear"></i> Settings</li>
             </a>
             <div class=left-col>
