--- a/404.html
+++ b/404.html
@@ -41,9 +41,7 @@
           font-size: 50px;
         }
 
-        section.notFound h1,
-        h2,
-        h3 {
+        section.notFound h1,h2,h3 {
           margin-bottom: 40px;
         }
 
