--- a/pages/request.html
+++ b/pages/request.html
@@ -5,7 +5,7 @@
       <link rel="stylesheet" href="/css/style.css">
       <link rel="stylesheet" href="/css/styles.css">
       <link rel="stylesheet" href="/css/particles.css">
-      <link rel='icon' href="https://i.ibb.co/DYWMfgQ/Untitled-2.png">
+      <link rel='icon' href="../img/favicon-32x32.png">
    </head>
    <body>
       <div id="particles-js"></div>
@@ -15,7 +15,7 @@
             src="https://docs.google.com/forms/d/e/1FAIpQLSeVxWIpa-UjJf_f-_mGzYmdv5nbJwdrZf3Tx8JPtxn2vE4HxA/viewform?embedded=true"
             width="640" height="900px" frameborder="0" marginheight="0" marginwidth="0">Loading…</iframe>
          <p>
-            <button onclick="window.open ('index.html', '_self');" class="button button1">back</button>
+            <button onclick="window.open ('../index.html', '_self');" class="button button1">back</button>
          </p>
       </center>
       <script type="text/javascript" src="/js/particles.js"></script>
