--- a/pages/settings.html
+++ b/pages/settings.html
@@ -5,7 +5,7 @@
       <link rel="stylesheet" href="/css/style.css">
       <link rel="stylesheet" href="/css/styles.css">
       <link rel="stylesheet" href="/css/particles.css">
-      <link rel='icon' href="https://i.ibb.co/DYWMfgQ/Untitled-2.png">
+      <link rel='icon' href="../img/favicon-32x32.png">
       <h1>Under Contruction</h1>
    </head>
    <body>
@@ -13,7 +13,7 @@
       <center>
          <br>
          <p>
-            <button onclick="window.open ('index.html', '_self');" class="button button1">back</button>
+            <button onclick="window.open ('../index.html', '_self');" class="button button1">back</button>
          </p>
       </center>
       <script type="text/javascript" src="/js/particles.js"></script>
