--- a/index.html
+++ b/index.html
@@ -76,14 +76,22 @@
          <li class="nav"><button name="new" onclick="switchGame('new');" class="selectButton selectable">New</button></li>
          <li class="nav"><button name="flash" onclick="switchGame('flash');" class="selectButton selectable">Flash</button></li>
          <li class="nav"><button name="gba" onclick="switchGame('gba');" class="selectButton selectable">GBA</button></li>
-         <li class="nav"><button name="2" onclick="switchGame('2');" class="selectButton selectable">2 Player</button></li>
+         <li class="nav"><button name="multiplayer" onclick="switchGame('multi');" class="selectButton selectable">Multiplayer</button></li>
       </ul>
       <div class="bodyMain">
       <div>
          <div class="main">
             <!-- Portfolio Gallery Grid -->
             <div class="row">
-               <div name="1 on 1 Soccer" class="column gameDiv all flash new">
+               <div name="Minecraft 1.8.8" class="column gameDiv all new multi">
+                  <a class="blogLink" href="minecraft/">
+                     <div class="content">
+                        <img src="img/minecraft.png" alt="Minecraft" style="width:100%">
+                        <h4>Minecraft 1.8.8</h4>
+                     </div>
+                  </a>
+               </div>
+               <div name="1 on 1 Soccer" class="column gameDiv all flash">
                   <a class="blogLink" href="games/flash/?swf=1on1soccer.swf">
                      <div class="content">
                         <img src="img/1-on-1-soccer.png" alt="1 on 1 Soccer" style="width:100%">
@@ -91,7 +99,7 @@
                      </div>
                   </a>
                </div>
-               <div name="Age of War" class="column gameDiv all flash new">
+               <div name="Age of War" class="column gameDiv all flash">
                   <a class="blogLink" href="games/flash/?swf=ageofwar.swf">
                      <div class="content">
                         <img src="img/age-of-war.png" alt="Age of War" style="width:100%">
@@ -99,7 +107,7 @@
                      </div>
                   </a>
                </div>
-               <div name="Bullet Bill" class="column gameDiv all flash new">
+               <div name="Bullet Bill" class="column gameDiv all flash">
                   <a class="blogLink" href="games/flash/?swf=bulletbill.swf">
                      <div class="content">
                         <img src="img/bullet-bill.png" alt="Bullet Bill" style="width:100%">
@@ -107,7 +115,7 @@
                      </div>
                   </a>
                </div>
-               <div name="Cube Field" class="column gameDiv all flash new">
+               <div name="Cube Field" class="column gameDiv all flash">
                   <a class="blogLink" href="games/flash/?swf=cubefield.swf">
                      <div class="content">
                         <img src="img/cube-field.png" alt="Cube Field" style="width:100%">
@@ -115,7 +123,7 @@
                      </div>
                   </a>
                </div>
-               <div name="Miami Shark" class="column gameDiv all flash new">
+               <div name="Miami Shark" class="column gameDiv all flash">
                   <a class="blogLink" href="games/flash/?swf=miamishark.swf">
                      <div class="content">
                         <img src="img/miami-shark.png" alt="Miami Shark" style="width:100%">
@@ -123,7 +131,7 @@
                      </div>
                   </a>
                </div>
-               <div name="Mini Putt" class="column gameDiv all flash new">
+               <div name="Mini Putt" class="column gameDiv all flash">
                   <a class="blogLink" href="games/flash/?swf=miniputt.swf">
                      <div class="content">
                         <img src="img/miniputt.png" alt="Mini Putt" style="width:100%">
@@ -131,7 +139,7 @@
                      </div>
                   </a>
                </div>
-               <div name="Stealing the Diamond" class="column gameDiv all flash new">
+               <div name="Stealing the Diamond" class="column gameDiv all flash">
                   <a class="blogLink" href="games/flash/?swf=stealingthediamond.swf">
                      <div class="content">
                         <img src="img/stealing-the-diamond.png" alt="Stealing the Diamond" style="width:100%">
@@ -139,7 +147,7 @@
                      </div>
                   </a>
                </div>
-               <div name="Escaping the Prison" class="column gameDiv all flash new">
+               <div name="Escaping the Prison" class="column gameDiv all flash">
                   <a class="blogLink" href="games/flash/?swf=escapingtheprison.swf">
                      <div class="content">
                         <img src="img/escaping-the-prison.png" alt="Escaping the Prison" style="width:100%">
@@ -147,7 +155,7 @@
                      </div>
                   </a>
                </div>
-               <div name="Unfair Mario" class="column gameDiv all flash new">
+               <div name="Unfair Mario" class="column gameDiv all flash">
                   <a class="blogLink" href="games/flash/?swf=unfairmario.swf">
                      <div class="content">
                         <img src="img/unfair-mario.png" alt="Unfair Mario" style="width:100%">
@@ -155,7 +163,7 @@
                      </div>
                   </a>
                </div>
-               <div name="Grow in the Hole" class="column gameDiv all new">
+               <div name="Grow in the Hole" class="column gameDiv all">
                   <a class="blogLink" href="more-games/26a025a2-9ab0-4d3f-8892-83528bede967/content/cache.armorgames.com/files/games/grow-in-the-hole-18581/index.html">
                      <div class="content">
                         <img src="img/grow-in-the-hole.png" alt="Grow in the Hole" style="width:100%">
@@ -163,7 +171,7 @@
                      </div>
                   </a>
                </div>
-               <div name="Tiny Fishing" class="column gameDiv all new">
+               <div name="Tiny Fishing" class="column gameDiv all">
                   <a class="blogLink" href="more-games/ebac7426-df7d-44c9-a8a0-34ec4c4fab2c/content/enjoy4fun.com/game/tinyfishing/v2/index.html">
                      <div class="content">
                         <img src="img/tiny-fishing.png" alt="Tiny Fishing" style="width:100%">
@@ -171,7 +179,7 @@
                      </div>
                   </a>
                </div>
-               <div name="Stick Slasher" class="column gameDiv all new">
+               <div name="Stick Slasher" class="column gameDiv all">
                   <a class="blogLink" href="more-games/db7df586-630c-42f6-8072-ce597bbebb33/content/7b94d8fc-8e0f-4d66-ad15-3c9d45e54cdf.id.repl.co/index.html">
                      <div class="content">
                         <img src="img/stick-slasher.png" alt="Stick Slasher" style="width:100%">
@@ -807,7 +815,7 @@
                      </div>
                   </a>
                </div>
-               <div name="Madalin Stunt Cars" class="column gameDiv all car">
+               <div name="Madalin Stunt Cars" class="column gameDiv all">
                   <a class="blogLink" href="games/madalin-cars-multiplayer/">
                      <div class="content">
                         <img src="img/madalin-stunt-cars-2.png" alt="Madalin Stunt Cars"
@@ -849,7 +857,7 @@
                      </div>
                   </a>
                </div>
-               <div name="Basketball Legends" class="column gameDiv all 2 sport">
+               <div name="Basketball Legends" class="column gameDiv all multi sport">
                   <a class="blogLink" href="games/basketball-stars/">
                      <div class="content">
                         <img src="img/basketball-Legends.png" alt="Basketball Legends"
@@ -858,7 +866,7 @@
                      </div>
                   </a>
                </div>
-               <div name="Tank Trouble 2" class="column gameDiv all 2 car">
+               <div name="Tank Trouble 2" class="column gameDiv all multi">
                   <a class="blogLink" href="games/tank-trouble-2/">
                      <div class="content">
                         <img src="img/tank-Trouble.png" alt="Tank Trouble 2"
