--- a/index.html
+++ b/index.html
@@ -668,7 +668,7 @@
                      </div>
                   </a>
                </div>
-               <div name="Rooftop Snipers" class="column gameDiv all 2">
+               <div name="Rooftop Snipers" class="column gameDiv all multi">
                   <a class="blogLink" href="games/rooftop-snipers/">
                      <div class="content">
                         <img src="img/rooftopSnipers.png" alt="Rooftop Snipers" style="width:100%">
@@ -676,7 +676,7 @@
                      </div>
                   </a>
                </div>
-               <div name="Getaway Shooter" class="column gameDiv all 2">
+               <div name="Getaway Shooter" class="column gameDiv all multi">
                   <a class="blogLink" href="games/getaway-shootout/">
                      <div class="content">
                         <img src="img/getaway-shootout.png" alt="Getaway Shootout" style="width:100%">
@@ -684,7 +684,7 @@
                      </div>
                   </a>
                </div>
-               <div name="Tube Jumpers" class="column gameDiv all 2">
+               <div name="Tube Jumpers" class="column gameDiv all multi">
                   <a class="blogLink" href="games/tube-jumpers/">
                      <div class="content">
                         <img src="img/tube-jumpers.png" alt="Tube Jumpers" style="width:100%">
@@ -1005,7 +1005,7 @@
                      </div>
                   </a>
                </div>
-               <div name="Monopoly" class="column gameDiv all gba">
+               <div name="Monopoly" class="column gameDiv all gba multi">
                   <a class="blogLink" href="games/gba/launcher.html#monopoly">
                      <div class="content">
                         <img src="img/monoply.png" alt="Monopoly" style="width:100%">
