--- a/404.html
+++ b/404.html
@@ -95,10 +95,16 @@
         <h1>404</h1>
         <h2>PAGE NOT FOUND</h2>
         <h3>BACK TO HOME?</h3>
-        <a href="https://dngaa.github.io/" class="yes">YES</a>
+        <a href="onclick="redirectToHome()"" class="yes">YES</a>
         <a href="https://www.youtube.com/watch?v=G3AfIvJBcGo">NO</a>
       </div>
-    </section>
+      </section>
+    <script>
+        // JavaScript function to redirect when button is clicked
+        function redirectToHome() {
+            window.location.href = '/index.html';
+        }
+    </script>
     <script type="text/javascript" src="https://dngaa.github.io/js/particles.js"></script>
     <script type="text/javascript" src="https://dngaa.github.io/js/app.js"></script>
   </body>
